--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,18 @@ body {
     font-size: 10pt;
 }
 
+.scrollableContainer2 {
+    /* width: 80%;  */
+    max-height: 300px;
+    overflow: auto;
+    /* margin: 20px auto; */
+    padding: 10px 30px;
+    /* border: 1px solid #ededed; */
+    background-color: #ffffff;
+    border-radius: 5px;
+    font-size: 10pt;
+}
+
 /* Styling the scrollbar itself */
 .scrollableContainer::-webkit-scrollbar {
     width: 10px;
